style: update font from sf pro to inter (#1913)
* style(font): add Inter font face

* style(font-family): update font-family to include 'inter' and 'sans-serif'

* style: fix some things missing for GreetStandard font-family

* style: add font-feature-settings for Inter font ligatures

---------

Co-authored-by: Julian Skinner <dev+github-bot@kajabi.com>

--- a/packages/sage-assets/lib/stylesheets/global/_reboot.scss
+++ b/packages/sage-assets/lib/stylesheets/global/_reboot.scss
@@ -33,8 +33,9 @@ section {
 
 body {
   margin: 0;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu",
+  font-family: "Inter", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-feature-settings: "liga" 1, "calt" 1; /* fix for Chrome */
   font-size: 1rem;
   font-weight: 425;
   line-height: 1.5; /* NOTE: line-height must be '1.5' to avoid conflicts with Ladera */
@@ -66,7 +67,7 @@ h6,
   margin-top: 0;
   margin-bottom: 0;
   color: sage-color(charcoal, 500);
-  font-family: "GreetStandard", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu" ;
+  font-family: "GreetStandard", "Inter", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu", sans-serif ;
 }
 
 p {
