--- a/docs/app/views/examples/components/empty_state/_preview.html.erb
+++ b/docs/app/views/examples/components/empty_state/_preview.html.erb
@@ -31,7 +31,6 @@
 <%= sage_component SageEmptyState, {
   title: "Create your first Email Campaign",
   graphic: image_tag("empty-state-lg.svg", alt: ""),
-  scope: "page",
 } do %>
   <% content_for :sage_empty_state_text do %>
     <p>
@@ -41,7 +40,7 @@
     </p>
   <% end %>
   <% content_for :sage_empty_state_actions do %>
-    <%= sage_component SageButtonGroup, { gap: :sm } do %>
+    <%= sage_component SageButtonGroup, { align: 'center', gap: :sm } do %>
       <%= sage_component SageButton, {
         attributes: { href: "#" },
         style: "primary",
@@ -61,7 +60,6 @@
 <%= sage_component SageEmptyState, {
   title: "Create your first Email Campaign",
   graphic: image_tag("empty-state-lg.svg", alt: ""),
-  scope: "page",
 } do %>
   <% content_for :sage_empty_state_text do %>
     <p>
@@ -71,16 +69,18 @@
     </p>
   <% end %>
   <% content_for :sage_empty_state_actions do %>
-    <%= sage_component SageButton, {
-      attributes: { href: "#" },
-      style: "primary",
-      value: "Create Email Campaigns",
-    } %>
-    <%= sage_component SageButton, {
-      attributes: { href: "#" },
-      style: "secondary",
-      subtle: true,
-      value: "Learn More",
-    } %>
+    <%= sage_component SageButtonGroup, { align: 'center', gap: :sm } do %>
+      <%= sage_component SageButton, {
+        attributes: { href: "#" },
+        style: "primary",
+        value: "Create Email Campaigns",
+      } %>
+      <%= sage_component SageButton, {
+        attributes: { href: "#" },
+        style: "secondary",
+        subtle: true,
+        value: "Learn More",
+      } %>
+    <% end %>
   <% end %>
 <% end %>
