--- a/packages/sage-assets/lib/stylesheets/components/_icon_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_icon_card.scss
@@ -29,6 +29,10 @@
     --background-color: #{sage-color-combo($-color, default, background)};
   }
 }
+
+.sage-icon-card--gradient {
+  background-image: linear-gradient(180deg, var(--color-gradient-top) 0%, var(--color-gradient-bottom) 100%)
+}
 .sage-icon-card--round {
   border-radius: sage-border(radius-round);
 }
