--- a/docs/lib/sage_rails/app/views/sage_components/_sage_empty_state.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_empty_state.html.erb
@@ -20,11 +20,18 @@ end
     </div>
   <% end %>
 
-  <%= sage_component SageIcon, {
-    icon: component.icon,
-    size: variant == 'compact' ? 'xl' : '3xl',
-    css_classes: "sage-empty-state__icon"
-  } if component.icon %>
+  <% if component.icon.present? %>
+    <div
+      class="sage-empty-state__icon-container"
+      style="--color-background-icon: <%= component.icon_background || SageTokens::COLOR_PALETTE[:MERCURY_30] %>"
+    >
+      <%= sage_component SageIcon, {
+        icon: component.icon,
+        size: variant == 'compact' ? 'xl' : '3xl',
+        css_classes: "sage-empty-state__icon"
+      }%>
+    </div>
+  <% end %>
 
   <div class="sage-empty-state__content">
     <% if component.title.present? %>
