--- a/docs/lib/sage_rails/app/views/sage_components/_sage_empty_state.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_empty_state.html.erb
@@ -26,6 +26,7 @@ end
       style="--color-background-icon: <%= component.icon_background || SageTokens::COLOR_PALETTE[:MERCURY_30] %>"
     >
       <%= sage_component SageIcon, {
+        color: "white",
         icon: component.icon,
         size: variant == 'compact' ? 'xl' : '3xl',
         css_classes: "sage-empty-state__icon"
