docs: update location of icons in documentation pages

--- a/docs/app/views/examples/components/alert/_props.html.erb
+++ b/docs/app/views/examples/components/alert/_props.html.erb
@@ -20,7 +20,7 @@
   <td><%= md('`icon_name`') %></td>
   <td><%= md('Icon defaults are provided. Icons can also be customized with this property.') %></td>
   <td><%= md('String') %></td>
-  <td><%= md('See Sage Icons.') %></td>
+  <td><%= md('See Icons.') %></td>
 </tr>
 <tr>
   <td><%= md('`primary_action`') %></td>
