--- a/docs/app/views/examples/components/form_input/_props.html.erb
+++ b/docs/app/views/examples/components/form_input/_props.html.erb
@@ -24,7 +24,7 @@
 </tr>
 <tr>
   <td><%= md('`icon`') %></td>
-  <td><%= md('Adds a static icon for visual context. See Sage Icons under "Design."') %></td>
+  <td><%= md('Adds a static icon for visual context. See Icons under "Foundations."') %></td>
   <td><%= md('String') %></td>
   <td><%= md('`nil`') %></td>
 </tr>
