--- a/docs/app/views/examples/components/hint/_props.html.erb
+++ b/docs/app/views/examples/components/hint/_props.html.erb
@@ -8,5 +8,5 @@
   <td><%= md('`icon`') %></td>
   <td><%= md('Icon to be displayed before the text content.') %></td>
   <td><%= md('String') %></td>
-  <td><%= md('See Sage Icons.') %></td>
+  <td><%= md('See Icons.') %></td>
 </tr>
