--- a/docs/app/views/examples/components/icon/_props.html.erb
+++ b/docs/app/views/examples/components/icon/_props.html.erb
@@ -30,14 +30,14 @@
 </tr>
 <tr>
   <td><%= md('`color`') %></td>
-  <td><%= md('Which color to use to render the icon. See Sage Colors under "Design."') %></td>
+  <td><%= md('Which color to use to render the icon. See Sage Colors under "Foundations."') %></td>
   <td><%= md('Color slider values such as "primary", "prmary-100".') %></td>
   <td><%= md('`nil`') %></td>
 </tr>
 <tr>
   <td><%= md('`icon`') %><%= sage_component SageBadge, { color: "published", value: "required" } %></td>
   <td><%= md('
-    Which icon to display. See Sage Icons under "Figma Design."
+    Which icon to display. See Icons under "Foundations."
     Note: `null` is also available to place an empty space icon
   ') %></td>
   <td><%= md('`String` for desired icon.') %></td>
