--- a/docs/app/views/examples/components/icon_card/_props.html.erb
+++ b/docs/app/views/examples/components/icon_card/_props.html.erb
@@ -26,7 +26,7 @@
   <td><%= md('`icon`') %><%= sage_component SageBadge, { color: "published", value: "required" } %></td>
   <td><%= md('The Sage icon to show inside the card.') %></td>
   <td><%= md('`String`') %></td>
-  <td><%= md('See Sage Icons.') %></td>
+  <td><%= md('See Icons.') %></td>
 </tr>
 <tr>
   <td><%= md('`label`') %></td>
