--- a/docs/app/views/examples/components/property/_props.html.erb
+++ b/docs/app/views/examples/components/property/_props.html.erb
@@ -1,8 +1,8 @@
 <tr>
   <td><%= md('`icon`') %></td>
-  <td><%= md('The Sage icon to show in the property.') %></td>
+  <td><%= md('The icon to show in the property.') %></td>
   <td><%= md('String') %></td>
-  <td><%= md('See Sage Icons.') %></td>
+  <td><%= md('See Icons.') %></td>
 </tr>
 <tr>
   <td><%= md('`value`') %></td>
