--- a/docs/app/views/examples/components/status_icon/_props.html.erb
+++ b/docs/app/views/examples/components/status_icon/_props.html.erb
@@ -2,7 +2,7 @@
   <td><%= md('`icon`') %><%= sage_component SageBadge, { color: "published", value: "required" } %></td>
   <td><%= md('The icon to be display.') %></td>
   <td><%= md('String') %></td>
-  <td><%= md('See Sage Icons.') %></td>
+  <td><%= md('See Icons.') %></td>
 </tr>
 <tr>
   <td><%= md('`value`') %><%= sage_component SageBadge, { color: "published", value: "required" } %></td>
