fix(box like components): add white background and md box shadow

--- a/packages/sage-assets/lib/stylesheets/components/_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_card.scss
@@ -11,6 +11,8 @@ $-sage-card-background: transparent;
 .sage-card {
   @include sage-card();
 
+  background-color: sage-color(white);
+  box-shadow: sage-shadow(md);
   position: relative;
   width: 100%;
 }
