--- a/packages/sage-assets/lib/stylesheets/components/_transaction_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_transaction_card.scss
@@ -11,6 +11,8 @@ $-transaction-card-price-max-width: rem(100px);
 .sage-transaction-card {
   @include sage-card;
 
+  background-color: sage-color(white);
+  box-shadow: sage-shadow(md);
   position: relative;
   width: 100%;
 
