style(alert): adjust small variant icon alignment

--- a/packages/sage-assets/lib/stylesheets/components/_alert.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_alert.scss
@@ -117,7 +117,7 @@ $-alert-icon-colors: (
   }
 
   .sage-alert--small & {
-    transform: translateY(-2px);
+    transform: translateY(0);
   }
 }
 
