fix(p): remove adjacent p tag spacing

--- a/docs/lib/sage-frontend/stylesheets/docs/_panel.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_panel.scss
@@ -1,7 +1,11 @@
 .docs-panel {
   @include sage-panel;
-  
+
   @media screen and (min-width: sage-breakpoint(lg-min)) {
     padding: 5rem;
+  }
+
+  p + p {
+    margin-top: 1.5rem;
   }
 }
