fix: add white background color to box-like elements
* fix(box-shadow): update box shadow token value

* fix(box like components): add white background and md box shadow

* fix(container): remove color and shadow from container

* fix(css): updated order

* fix(frame): update to fix background color with nested frames

* fix(frame): add white background to bordered variant

--- a/packages/sage-assets/lib/stylesheets/components/_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_card.scss
@@ -13,6 +13,8 @@ $-sage-card-background: transparent;
 
   position: relative;
   width: 100%;
+  background-color: sage-color(white);
+  box-shadow: sage-shadow(md);
 }
 
 .sage-card--border-dashed {
