--- a/packages/sage-assets/lib/stylesheets/tokens/_shadow.scss
+++ b/packages/sage-assets/lib/stylesheets/tokens/_shadow.scss
@@ -9,10 +9,10 @@
 /// Sage shadows token
 ///
 $sage-shadows: (
-  sm: (0 2px 4px rgba(sage-color(black), 0.12), 0 0 2px rgba(sage-color(black), 0.08)),
-  md: (0 8px 14px rgba(sage-color(black), 0.16), 0 0 4px rgba(sage-color(black), 0.08)),
-  lg: (0 8px 40px rgba(sage-color(black), 0.24)),
-  modal: (0 8px 40px rgba(sage-color(black), 0.24), 0 0 4px rgba(sage-color(black), 0.1)),
+  sm: (0 1px 2px rgba(sage-color(grey, 95), 0.06), 0 1px 3px rgba(sage-color(grey, 95), 0.1)),
+  md: (0 4px 6px -2px rgba(sage-color(grey, 95), 0.03), 0 12px 16px -4px rgba(sage-color(grey, 95), 0.08)),
+  lg: (0 24px 48px -12px rgba(sage-color(grey, 95), 0.18)),
+  modal: (0 32px 64px -12px rgba(sage-color(grey, 95), 0.24)),
 );
 
 ///
