--- a/packages/sage-assets/lib/stylesheets/components/_link.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_link.scss
@@ -167,6 +167,7 @@ $-link-base-styles: (
 .sage-link--help-icon-only {
   position: relative;
   text-decoration: none;
+  color: inherit;
 
   &::before,
   pds-icon {
@@ -179,6 +180,7 @@ $-link-base-styles: (
   &:active,
   &:focus {
     outline: 0;
+    color: inherit;
 
     pds-icon {
       color: sage-color(charcoal, 300);
