fix(link): add missing icon for help link variant (#1943)
* fix(link): added missing icon for help variant

* docs(link): add missing help link examples

* style(link): hello linter my old friend

--- a/packages/sage-assets/lib/stylesheets/components/_link.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_link.scss
@@ -167,6 +167,7 @@ $-link-base-styles: (
 .sage-link--help-icon-only {
   position: relative;
   text-decoration: none;
+  color: inherit;
 
   &::before,
   pds-icon {
@@ -178,6 +179,7 @@ $-link-base-styles: (
   &:hover,
   &:active,
   &:focus {
+    color: inherit;
     outline: 0;
 
     pds-icon {
