fix: remove box-shadow from inner card and panels

--- a/packages/sage-assets/lib/stylesheets/components/_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_card.scss
@@ -15,6 +15,11 @@ $-sage-card-background: transparent;
   width: 100%;
   background-color: sage-color(white);
   box-shadow: sage-shadow(md);
+
+  .sage-card,
+  .sage-panel & {
+    box-shadow: none;
+  }
 }
 
 .sage-card--border-dashed {
