--- a/docs/lib/sage-frontend/stylesheets/docs/_panel.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_panel.scss
@@ -1,6 +1,11 @@
 .docs-panel {
   @include sage-panel;
 
+  .sage-card,
+  .sage-panel {
+    box-shadow: none;
+  }
+
   @media screen and (min-width: sage-breakpoint(lg-min)) {
     padding: 5rem;
   }
