--- a/packages/sage-assets/lib/stylesheets/components/_stat_box.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_stat_box.scss
@@ -14,6 +14,11 @@ $-stat-box-image-max-width: rem(48px);
   box-shadow: sage-shadow(md);
   background-color: sage-color(white);
 
+  .sage-card &,
+  .sage-panel & {
+    box-shadow: none;
+  }
+
   &.sage-stat-box--raised {
     box-shadow: sage-shadow(sm);
     border: 0;
