fix: update image in empty state

--- a/docs/app/views/examples/components/empty_state/_preview.html.erb
+++ b/docs/app/views/examples/components/empty_state/_preview.html.erb
@@ -20,7 +20,7 @@
 
 <h3>With Graphic</h3>
 <%= sage_component SageEmptyState, {
-  graphic: image_tag("empty-state-sm.svg", alt: ""),
+  graphic: image_tag("card-placeholder-lg.png", alt: ""),
   title: "Title for state, with graphic instead of icon",
   text: "Text to appear below. Lorem ipsum dolor sit amet consectituor.",
 } do %>
