fix: update box shadows

--- a/packages/sage-assets/lib/stylesheets/components/_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_card.scss
@@ -14,7 +14,7 @@ $-sage-card-background: transparent;
   position: relative;
   width: 100%;
   background-color: sage-color(white);
-  box-shadow: sage-shadow(md);
+  box-shadow: sage-shadow(100);
 
   .sage-card,
   .sage-panel & {
