--- a/packages/sage-assets/lib/stylesheets/components/_choice.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_choice.scss
@@ -44,7 +44,7 @@ $-choice-radio-color-checked-inner: map-get($sage-radio-colors, checked-inner);
   background-color: sage-color(white);
   border: sage-border();
   border-radius: sage-border(radius-large);
-  box-shadow: sage-shadow(md);
+  box-shadow: sage-shadow(100);
   transition: map-get($sage-transitions, default);
   transition-property: color, background-color, border-color, box-shadow;
 
