--- a/packages/sage-assets/lib/stylesheets/components/_switch.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_switch.scss
@@ -42,7 +42,7 @@ $-switch-toggle-size: rem(16px);
     padding: sage-spacing(card);
     border: sage-border();
     border-radius: sage-border(radius);
-    box-shadow: sage-shadow(md);
+    box-shadow: sage-shadow(100);
     background-color: sage-color(white);
 
     .sage-card &,
