fix: add 0 to make token 3 digits

--- a/docs/app/views/pages/_color_values.html.erb
+++ b/docs/app/views/pages/_color_values.html.erb
@@ -4,7 +4,7 @@
       <%= render "color_values_body", color: color, value: value %>
     <% end %>
   <% else %>
-    <% [5, 10, 15, 20, 30, 40, 50, 60, 70, 80, 95].each do |value| %>
+    <% ["050", 100, 200, 300, 400, 500, 600, 700, 800, 950].each do |value| %>
       <%= render "color_values_body", color: color, value: value %>
     <% end %>
   <% end %>
