--- a/packages/sage-assets/lib/stylesheets/dictionary/_tokens.scss
+++ b/packages/sage-assets/lib/stylesheets/dictionary/_tokens.scss
@@ -778,149 +778,149 @@ $sd-sage-color-base-yellow-500-code: "yellow-500";
 ///
 $sd-sage-color-base-yellow-500-classname: "t-sage--color-yellow-500";
 ///
-/// color color-base-red-5-hex
-///
-$sd-sage-color-base-red-5-hex: #fffafa;
-///
-/// color color-base-red-5-code
-///
-$sd-sage-color-base-red-5-code: "red-5";
-///
-/// color color-base-red-5-classname
-///
-$sd-sage-color-base-red-5-classname: "t-sage--color-red-5";
-///
-/// color color-base-red-10-hex
-///
-$sd-sage-color-base-red-10-hex: #fef2f2;
-///
-/// color color-base-red-10-code
-///
-$sd-sage-color-base-red-10-code: "red-10";
-///
-/// color color-base-red-10-classname
-///
-$sd-sage-color-base-red-10-classname: "t-sage--color-red-10";
-///
-/// color color-base-red-15-hex
-///
-$sd-sage-color-base-red-15-hex: #fee2e1;
-///
-/// color color-base-red-15-code
-///
-$sd-sage-color-base-red-15-code: "red-15";
-///
-/// color color-base-red-15-classname
-///
-$sd-sage-color-base-red-15-classname: "t-sage--color-red-15";
-///
-/// color color-base-red-20-hex
-///
-$sd-sage-color-base-red-20-hex: #fecaca;
-///
-/// color color-base-red-20-code
-///
-$sd-sage-color-base-red-20-code: "red-20";
-///
-/// color color-base-red-20-classname
-///
-$sd-sage-color-base-red-20-classname: "t-sage--color-red-20";
-///
-/// color color-base-red-30-hex
-///
-$sd-sage-color-base-red-30-hex: #fda5a5;
-///
-/// color color-base-red-30-code
-///
-$sd-sage-color-base-red-30-code: "red-30";
-///
-/// color color-base-red-30-classname
-///
-$sd-sage-color-base-red-30-classname: "t-sage--color-red-30";
-///
-/// color color-base-red-40-hex
-///
-$sd-sage-color-base-red-40-hex: #f87171;
-///
-/// color color-base-red-40-code
-///
-$sd-sage-color-base-red-40-code: "red-40";
-///
-/// color color-base-red-40-classname
-///
-$sd-sage-color-base-red-40-classname: "t-sage--color-red-40";
-///
 /// color color-base-red-50-hex
 ///
-$sd-sage-color-base-red-50-hex: #ef4444;
+$sd-sage-color-base-red-50-hex: #fffafa;
 ///
 /// color color-base-red-50-code
 ///
-$sd-sage-color-base-red-50-code: "red-50";
+$sd-sage-color-base-red-50-code: "red-5";
 ///
 /// color color-base-red-50-classname
 ///
-$sd-sage-color-base-red-50-classname: "t-sage--color-red-50";
+$sd-sage-color-base-red-50-classname: "t-sage--color-red-5";
 ///
-/// color color-base-red-60-hex
+/// color color-base-red-100-hex
 ///
-$sd-sage-color-base-red-60-hex: #dc2625;
+$sd-sage-color-base-red-100-hex: #fef2f2;
 ///
-/// color color-base-red-60-code
+/// color color-base-red-100-code
 ///
-$sd-sage-color-base-red-60-code: "red-60";
+$sd-sage-color-base-red-100-code: "red-10";
 ///
-/// color color-base-red-60-classname
+/// color color-base-red-100-classname
 ///
-$sd-sage-color-base-red-60-classname: "t-sage--color-red-60";
+$sd-sage-color-base-red-100-classname: "t-sage--color-red-10";
 ///
-/// color color-base-red-70-hex
+/// color color-base-red-150-hex
 ///
-$sd-sage-color-base-red-70-hex: #b91c1b;
+$sd-sage-color-base-red-150-hex: #fee2e1;
 ///
-/// color color-base-red-70-code
+/// color color-base-red-150-code
 ///
-$sd-sage-color-base-red-70-code: "red-70";
+$sd-sage-color-base-red-150-code: "red-15";
 ///
-/// color color-base-red-70-classname
+/// color color-base-red-150-classname
 ///
-$sd-sage-color-base-red-70-classname: "t-sage--color-red-70";
+$sd-sage-color-base-red-150-classname: "t-sage--color-red-15";
 ///
-/// color color-base-red-80-hex
+/// color color-base-red-200-hex
 ///
-$sd-sage-color-base-red-80-hex: #991b1b;
+$sd-sage-color-base-red-200-hex: #fecaca;
 ///
-/// color color-base-red-80-code
+/// color color-base-red-200-code
 ///
-$sd-sage-color-base-red-80-code: "red-80";
+$sd-sage-color-base-red-200-code: "red-20";
 ///
-/// color color-base-red-80-classname
+/// color color-base-red-200-classname
 ///
-$sd-sage-color-base-red-80-classname: "t-sage--color-red-80";
+$sd-sage-color-base-red-200-classname: "t-sage--color-red-20";
 ///
-/// color color-base-red-90-hex
+/// color color-base-red-300-hex
 ///
-$sd-sage-color-base-red-90-hex: #7f1c1d;
+$sd-sage-color-base-red-300-hex: #fda5a5;
 ///
-/// color color-base-red-90-code
+/// color color-base-red-300-code
 ///
-$sd-sage-color-base-red-90-code: "red-90";
+$sd-sage-color-base-red-300-code: "red-30";
 ///
-/// color color-base-red-90-classname
+/// color color-base-red-300-classname
 ///
-$sd-sage-color-base-red-90-classname: "t-sage--color-red-90";
+$sd-sage-color-base-red-300-classname: "t-sage--color-red-30";
 ///
-/// color color-base-red-95-hex
+/// color color-base-red-400-hex
 ///
-$sd-sage-color-base-red-95-hex: #572627;
+$sd-sage-color-base-red-400-hex: #f87171;
 ///
-/// color color-base-red-95-code
+/// color color-base-red-400-code
 ///
-$sd-sage-color-base-red-95-code: "red-95";
+$sd-sage-color-base-red-400-code: "red-40";
 ///
-/// color color-base-red-95-classname
+/// color color-base-red-400-classname
 ///
-$sd-sage-color-base-red-95-classname: "t-sage--color-red-95";
+$sd-sage-color-base-red-400-classname: "t-sage--color-red-40";
+///
+/// color color-base-red-500-hex
+///
+$sd-sage-color-base-red-500-hex: #ef4444;
+///
+/// color color-base-red-500-code
+///
+$sd-sage-color-base-red-500-code: "red-50";
+///
+/// color color-base-red-500-classname
+///
+$sd-sage-color-base-red-500-classname: "t-sage--color-red-50";
+///
+/// color color-base-red-600-hex
+///
+$sd-sage-color-base-red-600-hex: #dc2625;
+///
+/// color color-base-red-600-code
+///
+$sd-sage-color-base-red-600-code: "red-60";
+///
+/// color color-base-red-600-classname
+///
+$sd-sage-color-base-red-600-classname: "t-sage--color-red-60";
+///
+/// color color-base-red-700-hex
+///
+$sd-sage-color-base-red-700-hex: #b91c1b;
+///
+/// color color-base-red-700-code
+///
+$sd-sage-color-base-red-700-code: "red-70";
+///
+/// color color-base-red-700-classname
+///
+$sd-sage-color-base-red-700-classname: "t-sage--color-red-70";
+///
+/// color color-base-red-800-hex
+///
+$sd-sage-color-base-red-800-hex: #991b1b;
+///
+/// color color-base-red-800-code
+///
+$sd-sage-color-base-red-800-code: "red-80";
+///
+/// color color-base-red-800-classname
+///
+$sd-sage-color-base-red-800-classname: "t-sage--color-red-80";
+///
+/// color color-base-red-900-hex
+///
+$sd-sage-color-base-red-900-hex: #7f1c1d;
+///
+/// color color-base-red-900-code
+///
+$sd-sage-color-base-red-900-code: "red-90";
+///
+/// color color-base-red-900-classname
+///
+$sd-sage-color-base-red-900-classname: "t-sage--color-red-90";
+///
+/// color color-base-red-950-hex
+///
+$sd-sage-color-base-red-950-hex: #572627;
+///
+/// color color-base-red-950-code
+///
+$sd-sage-color-base-red-950-code: "red-95";
+///
+/// color color-base-red-950-classname
+///
+$sd-sage-color-base-red-950-classname: "t-sage--color-red-95";
 ///
 /// color color-base-orange-100-hex
 ///
@@ -1902,65 +1902,65 @@ $sd-sage-color: (
     ),
   ),
   red: (
-    5: (
-      hex: $sd-sage-color-base-red-5-hex,
-      code: $sd-sage-color-base-red-5-code,
-      classname: $sd-sage-color-base-red-5-classname,
-    ),
-    10: (
-      hex: $sd-sage-color-base-red-10-hex,
-      code: $sd-sage-color-base-red-10-code,
-      classname: $sd-sage-color-base-red-10-classname,
-    ),
-    15: (
-      hex: $sd-sage-color-base-red-15-hex,
-      code: $sd-sage-color-base-red-15-code,
-      classname: $sd-sage-color-base-red-15-classname,
-    ),
-    20: (
-      hex: $sd-sage-color-base-red-20-hex,
-      code: $sd-sage-color-base-red-20-code,
-      classname: $sd-sage-color-base-red-20-classname,
-    ),
-    30: (
-      hex: $sd-sage-color-base-red-30-hex,
-      code: $sd-sage-color-base-red-30-code,
-      classname: $sd-sage-color-base-red-30-classname,
-    ),
-    40: (
-      hex: $sd-sage-color-base-red-40-hex,
-      code: $sd-sage-color-base-red-40-code,
-      classname: $sd-sage-color-base-red-40-classname,
-    ),
     50: (
       hex: $sd-sage-color-base-red-50-hex,
       code: $sd-sage-color-base-red-50-code,
       classname: $sd-sage-color-base-red-50-classname,
     ),
-    60: (
-      hex: $sd-sage-color-base-red-60-hex,
-      code: $sd-sage-color-base-red-60-code,
-      classname: $sd-sage-color-base-red-60-classname,
+    100: (
+      hex: $sd-sage-color-base-red-100-hex,
+      code: $sd-sage-color-base-red-100-code,
+      classname: $sd-sage-color-base-red-100-classname,
     ),
-    70: (
-      hex: $sd-sage-color-base-red-70-hex,
-      code: $sd-sage-color-base-red-70-code,
-      classname: $sd-sage-color-base-red-70-classname,
+    150: (
+      hex: $sd-sage-color-base-red-150-hex,
+      code: $sd-sage-color-base-red-150-code,
+      classname: $sd-sage-color-base-red-150-classname,
     ),
-    80: (
-      hex: $sd-sage-color-base-red-80-hex,
-      code: $sd-sage-color-base-red-80-code,
-      classname: $sd-sage-color-base-red-80-classname,
+    200: (
+      hex: $sd-sage-color-base-red-200-hex,
+      code: $sd-sage-color-base-red-200-code,
+      classname: $sd-sage-color-base-red-200-classname,
     ),
-    90: (
-      hex: $sd-sage-color-base-red-90-hex,
-      code: $sd-sage-color-base-red-90-code,
-      classname: $sd-sage-color-base-red-90-classname,
+    300: (
+      hex: $sd-sage-color-base-red-300-hex,
+      code: $sd-sage-color-base-red-300-code,
+      classname: $sd-sage-color-base-red-300-classname,
     ),
-    95: (
-      hex: $sd-sage-color-base-red-95-hex,
-      code: $sd-sage-color-base-red-95-code,
-      classname: $sd-sage-color-base-red-95-classname,
+    400: (
+      hex: $sd-sage-color-base-red-400-hex,
+      code: $sd-sage-color-base-red-400-code,
+      classname: $sd-sage-color-base-red-400-classname,
+    ),
+    500: (
+      hex: $sd-sage-color-base-red-500-hex,
+      code: $sd-sage-color-base-red-500-code,
+      classname: $sd-sage-color-base-red-500-classname,
+    ),
+    600: (
+      hex: $sd-sage-color-base-red-600-hex,
+      code: $sd-sage-color-base-red-600-code,
+      classname: $sd-sage-color-base-red-600-classname,
+    ),
+    700: (
+      hex: $sd-sage-color-base-red-700-hex,
+      code: $sd-sage-color-base-red-700-code,
+      classname: $sd-sage-color-base-red-700-classname,
+    ),
+    800: (
+      hex: $sd-sage-color-base-red-800-hex,
+      code: $sd-sage-color-base-red-800-code,
+      classname: $sd-sage-color-base-red-800-classname,
+    ),
+    900: (
+      hex: $sd-sage-color-base-red-900-hex,
+      code: $sd-sage-color-base-red-900-code,
+      classname: $sd-sage-color-base-red-900-classname,
+    ),
+    950: (
+      hex: $sd-sage-color-base-red-950-hex,
+      code: $sd-sage-color-base-red-950-code,
+      classname: $sd-sage-color-base-red-950-classname,
     ),
   ),
   orange: (
@@ -2727,7 +2727,7 @@ $sd-sage-color-core-yellow: #fdbb21;
 ///
 /// color core color-core-red
 ///
-$sd-sage-color-core-red: #ef4444;
+$sd-sage-color-core-red: #fffafa;
 ///
 /// color core color-core-orange
 ///
